--- a/app/main.scss
+++ b/app/main.scss
@@ -155,3 +155,15 @@ $color-calendar-sheet-dow-fg: $palette-medium-gray-dark;
     }
   }
 }
+
+/*
+ * Clock UI component
+ */
+
+$color-clock-text: $palette-dark-gray-light;
+
+.clock {
+  font-size: 48px;
+  font-weight: bold;
+  color: $color-clock-text;
+}
