Add top section styles and minor fixes

--- a/app/flattastic-ui-theme.scss
+++ b/app/flattastic-ui-theme.scss
@@ -17,3 +17,5 @@ $palette-light-gray-light: #f5f7fa;
 $palette-light-gray-dark: #e6e9ed;
 $palette-medium-gray-light: #ccd1d9;
 $palette-medium-gray-dark: #aab2bd;
+$palette-dark-gray-light: #656d78;
+$palette-dark-gray-dark: #434a54;
